# ATSP

./: .gitignore  CMakeLists.txt  readme
config/: CMakePresets.json  config.json  config_documentation.md  ga_config.json
data/: best_solutions.txt  note.txt
data/PEA_test/: matrix_11x11.atsp  matrix_6x6.atsp  tsp_10a.txt  tsp_10b.txt  tsp_10c.txt  tsp_14_db.txt
data/TSPLib_ATSP/: br17.atsp  ftv33.atsp  ftv38.atsp  ftv44.atsp  ftv64.atsp  ftv70.atsp  matrix_11x11.atsp  matrix_8x8.atsp  ry48p.atsp  test_matrix
docs/: README.md
include/: ATSP.h  experiment.h  main.h  matrix.h  node.h  util.h
include/Algorithms/: BranchAndBound.h  BruteForce.h  DynamicProgramming.h  GeneticAlgo.h  TabuSearch.h
include/Algorithms/GeneticAlgorithm/: GeneticAlgo.h
python/: ga_best_strategy_search.py  ga_mutation_rate.py  ga_mutation_type.py  ga_offspring_rate.py  ga_plot_pop_size_vs_time.py  ga_plot_population_size.py  plot.py  plot1.py  plot2.py  requirements.txt  resultTable2.py
src/: ATSP.cpp  experiment.cpp  main.cpp  matrix.cpp  node.cpp  util.cpp
src/Algorithms/: BranchAndBound.cpp  BruteForce.cpp  DynamicProgramming.cpp  GeneticAlgo.cpp  TabuSearch.cpp
src/Algorithms/GeneticAlgorithm/: GeneticAlgo.cpp
